src/test/deca/codegen/valid/created/assign_dans_inst.ass
	TSTO #6
	BOV pile_pleine
	ADDSP #6
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Main program
	LOAD #3, R2
	STORE R2, 4(GB)
	BRA Assign_False.0
	LOAD #1, R2
	BRA Assign_Fin.0
Assign_False.0:
	LOAD #0, R2
Assign_Fin.0:
	STORE R2, 6(GB)
; Beginning of main instructions:
	LOAD 4(GB), R2
	STORE R2, 3(GB)
	LOAD R2, R1
	WINT
	LOAD 6(GB), R0
	CMP #0, R0
	BEQ Assign_False.2
	LOAD #1, R2
	BRA Assign_Fin.2
Assign_False.2:
	LOAD #0, R2
Assign_Fin.2:
	STORE R2, 5(GB)
	LOAD 5(GB), R0
	CMP #0, R0
	BEQ E_Fin.1
E_Fin.1:
	BRA E_Cond.3
E_Debut.3:
E_Cond.3:
	LOAD 6(GB), R0
	CMP #0, R0
	BEQ Assign_False.4
	LOAD #1, R2
	BRA Assign_Fin.4
Assign_False.4:
	LOAD #0, R2
Assign_Fin.4:
	STORE R2, 5(GB)
	LOAD 5(GB), R0
	CMP #0, R0
	BNE E_Debut.3
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	LOAD -2(LB), R1
	CMP 1(LB), R1
	BEQ Object.equals.true
	LOAD #0, R0
	BRA fin.Object.equals
Object.equals.true:
	LOAD #1, R0
fin.Object.equals:
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
; end main program
