src/test/deca/codegen/invalid/created/decl_var_sans_init.ass
	TSTO #6
	BOV pile_pleine
	ADDSP #6
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Main program
; Beginning of main instructions:
	LOAD 3(GB), R2
	LOAD R2, R1
	WINT
	WNL
	LOAD 4(GB), R2
	LOAD R2, R1
	WINT
	WNL
	LOAD 5(GB), R2
	LOAD R2, R1
	WFLOAT
	WNL
	LOAD 6(GB), R0
	CMP #0, R0
	BEQ E_Fin.0
	WSTR "ok"
E_Fin.0:
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	LOAD -2(LB), R1
	CMP 1(LB), R1
	BEQ Object.equals.true
	LOAD #0, R0
	BRA fin.Object.equals
Object.equals.true:
	LOAD #1, R0
fin.Object.equals:
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
; end main program
